Fix tests and apply styling rule to attempt to enable scrolling over iframes on iOS

--- a/app/pages/terms/terms.less
+++ b/app/pages/terms/terms.less
@@ -65,6 +65,10 @@
   margin-bottom: @spacing-large;
 }
 
+.iframe-holder {
+  -webkit-overflow-scrolling: touch;
+}
+
 .terms-iframe-terms {
   margin-bottom: @spacing-large;
   width: @terms-box-width;
